--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林), server: 185.167.116.252, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林), server: 185.167.116.38, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
   - {name: 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林), server: 185.167.116.252, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇳🇱 荷兰-1.39MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林), server: 185.167.116.252, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇳 中国-680.9KB/s(Youtube:不良林), server: zh01lv3uk01.feiguayun.xyz, port: 50011, type: ss, cipher: aes-256-gcm, password: 90a7d86e-6f6a-4230-b89b-03cfd7fe70dc}
+  - {name: 🇳🇱 荷兰-2.31MB/s(Youtube:不良林), server: 213.183.51.172, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇳🇱 荷兰-1.10MB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇳🇱 荷兰-1.11MB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇳🇱 荷兰-920.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇳🇱 荷兰-184.5KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-716.0KB/s(Youtube:不良林), server: 213.183.59.206, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
   - {name: 波兰-1.71MB/s(Youtube:不良林), server: 217.30.10.63, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-716.0KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-716.0KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-716.0KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-716.0KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-716.0KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-716.0KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.35MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-920.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-716.0KB/s(Youtube:不良林)
       - 波兰-1.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
