--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林), server: 185.167.116.38, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林), server: 185.167.116.252, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林), server: 185.167.116.252, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-680.9KB/s(Youtube:不良林), server: zh01lv3uk01.feiguayun.xyz, port: 50011, type: ss, cipher: aes-256-gcm, password: 90a7d86e-6f6a-4230-b89b-03cfd7fe70dc}
+  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 213.183.51.172, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林), server: 213.183.53.200, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇺🇸 美国-5.73MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-215.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
   - {name: 🇳🇱 荷兰-2.31MB/s(Youtube:不良林), server: 213.183.51.172, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
   - {name: 🇳🇱 荷兰-1.10MB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
   - {name: 🇳🇱 荷兰-184.5KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.46MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.31MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-184.5KB/s(Youtube:不良林)
