--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇯🇵 日本-2.83MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: 185.167.116.38, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇳🇱 荷兰-1.10MB/s(Youtube:不良林), server: 213.183.59.214, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林), server: 185.167.116.38, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林), server: 213.183.53.202, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇷🇺 俄罗斯联邦-2.46MB/s(Youtube:不良林), server: 213.183.53.202, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇳🇱 荷兰-2.03MB/s(Youtube:不良林), server: 185.246.155.46, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林), server: 213.183.53.208, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 波兰-1.50MB/s(Youtube:不良林), server: 217.30.10.67, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇳🇱 荷兰-844.6KB/s(Youtube:不良林), server: 213.183.51.172, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇨🇳 中国-421.5KB/s(Youtube:不良林), server: zh01lv5ge02.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 90a7d86e-6f6a-4230-b89b-03cfd7fe70dc}
+  - {name: 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林), server: 213.183.53.200, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林), server: 213.183.53.222, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林), server: 185.167.116.252, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林), server: 213.183.53.200, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林), server: 213.183.53.200, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2, server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林), server: 213.183.53.200, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
-      - 波兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
-      - 波兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
-      - 波兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
-      - 波兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
-      - 波兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
-      - 波兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.83MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-214.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.46MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.03MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.65MB/s(Youtube:不良林)
-      - 波兰-1.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
+      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
